Fix main padding to avoid fixed header overlap

--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ a:hover {
   width: 100%;
 }
 
-main {
+body {
   padding-top: 120px;
 }
 
